local/echo-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend-echo-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-backend-echo-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: default-backend-echo-service
    spec:
      containers:
        - env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: INGRESS_NAME
              value: default-backend
            - name: SERVICE_NAME
              value: echo-service
          image: k8s.gcr.io/ingressconformance/echoserver:v0.0.1@sha256:9b34b17f391f87fb2155f01da2f2f90b7a4a5c1110ed84cb5379faa4f570dc52
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          name: ingress-conformance-echo
          ports:
            - containerPort: 3000
              name: http
            - containerPort: 3443
              name: https
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: echo-service
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: default-backend-echo-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: no-rule-ingress
  namespace: default
spec:
  ingressClassName: cilium
  defaultBackend:
    service:
      name: echo-service
      port:
        number: 3000
